# mattioofr.github.io

./: .gitignore  CNAME  README.md  conf.py  index-1.html  index.html  pyproject.toml  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml  state_data.json
archive/: index.html  resume.html
categories/: ai.xml  blackjack.xml  blockchain.xml  blogging.xml  book.xml  books.xml  cat_random.xml  cat_tutorial.xml  ethereum.xml  flask.xml  food.xml  health.xml  heroku.xml  index.html  jupyter.xml  learning.xml  mathematic.xml  metamask.xml  nikola.xml  package.xml  pelican.xml  poetry.xml  porn.xml  python.xml  raspberry-pi.xml  self-development.xml  test.xml  trading.xml  tutorial.xml
galleries/: index.html  rss.xml
listings/: index.html  toto.ipynb  toto.ipynb.html
pages/: hello.html  index.html  resume.html
posts/: 4-methodes-gratuites-pour-telecharger-les-sous-titres-dune-video-gratuite.md  4-methodes-gratuites-pour-telecharger-les-sous-titres-dune-video-youtube.md  blackjack-the-21-game.md  cacher-le-notch-des-macbook-pro-pour-voir-toutes-ses-icones-dans-la-barre-des-menus.md  comment-rediger-votre-lettre-de-motivation-avec-lia.md  create-a-blog-with-nikola.md  create-a-blog-with-pelican.md  create-a-proxy-with-a-raspberry-pi-3-or-above.md  creer-un-compte-openai-et-obtenir-sa-cle-api.md  environement-variable-flask-heroku.md  environment-variable-flask-heroku.md  environment-variables-in-a-flask-+-heroku-project.md  how-to-cancel-a-pending-ethereum-transaction-with-metamask.md  how-to-get-your-own-nikola-static-blog.md  how-to-learn-efficiently.md  jupyternb.ipynb  ma-maman-geniale.md  test.ipynb  test.md  test.rst  (+8 more)
(+99 files in other folders)
