[tool.poetry]
name = "brainsorting"
version = "0.1.0"
description = ""
authors = ["MattiooFR <13595614+MattiooFR@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydevto = "^0.1.5"
pypandoc = "^1.5"
python-medium = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
