[tool.poetry]
name = "brainsorting"
version = "0.1.0"
description = ""
authors = ["MattiooFR <13595614+MattiooFR@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydevto = "^0.1.5"
pypandoc = "^1.5"
python-medium = "^1.1"
Nikola = {extras = ["extra"], version = "^8.0.4"}
nbconvert = "^5.6.1"
traitlets = "^4.3.3"
ipython = "^7.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
